--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sass": "1.97.3",
+    "secure-json-parse": "^4.1.0",
     "server-only": "0.0.1"
   },
   "devDependencies": {
