--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,17 +2,16 @@ ignoredBuiltDependencies:
   - sharp
   - unrs-resolver
 
-onlyBuiltDependencies:
-  - '@parcel/watcher'
-  - unrs-resolver
-# Prevents installation of packages newer than 7 days
-# to mitigate supply chain risks
-# - https://pnpm.io/settings#minimumreleaseage
 minimumReleaseAge: 10080
+
 minimumReleaseAgeExclude:
   - "@upleveled/*"
   - eslint-config-upleveled
   - stylelint-config-upleveled
-# Fail on pnpm ignored build scripts
-# - https://pnpm.io/settings#strictdepbuilds
+
+onlyBuiltDependencies:
+  - '@parcel/watcher'
+  - esbuild
+  - unrs-resolver
+
 strictDepBuilds: true
