--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "migrate": "ley",
     "start": "next start"
   },
   "dependencies": {
+    "@upleveled/ley": "0.9.2",
     "dotenv-safe": "9.1.0",
     "next": "16.1.6",
     "postgres": "3.4.8",
