Convert files to TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "**/*.jsx",
     "**/*.cjs",
     "**/*.mjs",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "database/fruits.jt"
   ]
 }
