--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "server-only": "0.0.1"
   },
   "devDependencies": {
+    "@jest/globals": "30.2.0",
     "@ts-safeql/eslint-plugin": "^4.2.0",
     "@types/dotenv-safe": "9.1.0",
     "@types/node": "^25.2.2",
@@ -29,6 +30,8 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "9.39.2",
     "eslint-config-upleveled": "^9.4.6",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
     "libpg-query": "^17.7.3",
     "prettier": "^3.8.1",
     "prettier-plugin-embed": "^0.5.1",
