--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ yarn-error.log*
 next-env.d.ts
 
 .eslintcache
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
+/playwright/report/
+/playwright/test-results/
