--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@jest/globals": "30.2.0",
+    "@playwright/test": "1.58.2",
     "@ts-safeql/eslint-plugin": "^4.2.0",
     "@types/dotenv-safe": "9.1.0",
     "@types/node": "^25.2.2",
